--- a/app/src/zhihu/resource/index.html
+++ b/app/src/zhihu/resource/index.html
@@ -22,7 +22,7 @@
             已有账号？<a href="#">登录</a>
         </div>
     </div>
-    <div><input type="button" value="下载知乎APP"></div>
+    <div class="button">下载知乎APP"</div>
 </div>
 </body>
 </html>
