--- a/app/src/zhihu/Cathy/index.html
+++ b/app/src/zhihu/Cathy/index.html
@@ -39,7 +39,7 @@
                             注册即代表同意<a href="# " class="con-1 ">《知乎协议》</a><a href="# " class="con-1 ">《隐私政策》</a><a href="# " class="con-2 ">注册机构号</a>
                         </p>
                         <div class="other ">
-                            已有账号？<a onclick="toggle( 'login') " href="# ">登录</a>
+                            已有账号？<a onclick="toggle('login') " href="# ">登录</a>
                         </div>
                     </div>
                     <a href="# " class="a-button "><div class="button ">下载知乎APP</div></a>
@@ -56,7 +56,8 @@
                     <h1 class="r1 "></h1>
                     <div class="mes ">
                         <input type="text " name="mes " placeholder="密码 " class="message ">
-                        <a href="# "><img src="./img/unvisable.png"></a>
+                        <a href="# " class="logsee1" onclick="see('a')"><img src="./img/unvisable.png"></a>
+                        <a href="# " class="logsee2" onclick="see('b')"><img src="./img/visable.png"></a>
                     </div>
                     <h1 class="r1 "></h1>
                     <span class="mes-get "><a href="# ">获取手机验证码</a></span>
@@ -66,7 +67,7 @@
                         <a href="# " class="con-1 ">二维码登录</a>&nbsp;.&nbsp;<a href="# " class="con-1 ">海外手机登录</a>&nbsp;.&nbsp;<a href="# " class="con-1 ">社交账号登录</a>
                     </p>
                     <div class="other ">
-                        没有账号？<a href="javascript: " onclick="toggle( 'register') " class="register-content ">注册</a>
+                        没有账号？<a href="javascript: " onclick="toggle('register') " class="register-content ">注册</a>
                     </div>
                 </div>
                 <a href="# " class="a-button "><div class="button ">下载知乎APP</div></a>
