--- a/app/src/zhihu/Cathy/index.html
+++ b/app/src/zhihu/Cathy/index.html
@@ -56,8 +56,8 @@
                     <h1 class="r1 "></h1>
                     <div class="mes ">
                         <input type="text " name="mes " placeholder="密码 " class="message ">
-                        <a href="# " class="logsee1" onclick="see('a')"><img src="./img/unvisable.png"></a>
-                        <a href="# " class="logsee2" onclick="see('b')"><img src="./img/visable.png"></a>
+                        <a href="# " class="s1" onclick="see('a')"><img src="./img/unvisable.png"></a>
+                        <a href="# " class="s2" onclick="see('b')"><img src="./img/visable.png"></a>
                     </div>
                     <h1 class="r1 "></h1>
                     <span class="mes-get "><a href="# ">获取手机验证码</a></span>
