--- a/app/src/zhihu/Cathy/index.html
+++ b/app/src/zhihu/Cathy/index.html
@@ -15,7 +15,7 @@
                 <div class="content">
                     <div class="login">
                         <div class="logo"></div>
-                        <p class="slogn">注册知乎，发现更大的世界</p>
+                        <p class="slogan">注册知乎，发现更大的世界</p>
                         <div class="inf-tele ">
                             <select class="area ">
                                 <option value="中国+86 " selected>中国+86</option>
@@ -49,7 +49,7 @@
             <div class="content ">
                 <div class="login ">
                     <div class="logo "></div>
-                    <p class="slogn ">登录知乎，发现更大的世界</p>
+                    <p class="slogan ">登录知乎，发现更大的世界</p>
                     <div class="inf-tele ">
                         <input type="text " name="telephone " placeholder="请输入手机号 " class="telephone1 ">
                     </div>
